name:                marienbad
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nickbaker/marienbad#readme
license:             BSD3
license-file:        LICENSE
author:              Nick Baker
maintainer:          nicolas7et8@gmail.com
copyright:           nickbaker
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable marienbad
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
